fixing more overflow issues for mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
 *, body {
     margin: 0;
     padding: 0;
+    overscroll-behavior: none;
 }
 
 .divider {
@@ -406,15 +407,15 @@ nav ul li a:hover {
     .work .slider {
         grid-column: 1 / 3;
         grid-row: 3 / 4;
-        width: 375px;
-        max-width: 375px;
+        width: 350px;
+        max-width: 350px;
         height: 250px;
         margin: 0;
     }
 
     .work .slide {
-        width: 375px;
-        max-width: 375px;
+        width: 350px;
+        max-width: 350px;
         height: 250px;
     }
 
@@ -449,13 +450,16 @@ nav ul li a:hover {
     .contact-info {
         grid-column: 1 / span 1;
         grid-row: 1 / 2;
+        margin: 0;
     }
 
     .hours {
         grid-row: 2 / 3;
+        margin: 0;
     }
 
     .footer-logo {
         grid-row: 3 / 4;
+        margin: 0;
     }
 }
